[gd_scene load_steps=4 format=3 uid="uid://eh2pge8j31c2"]

[ext_resource type="Script" path="res://sum_and_average.gd" id="1_nl6ao"]
[ext_resource type="LabelSettings" uid="uid://mogtp5n1f7ns" path="res://Langdocs/Big_Label_38.tres" id="2_wmbfa"]
[ext_resource type="Theme" uid="uid://2sh8kniwmbuq" path="res://Big_Font.tres" id="3_l8foh"]

[node name="SumAndAverage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nl6ao")

[node name="lblSum" type="Label" parent="."]
layout_mode = 0
offset_left = 270.0
offset_top = 198.0
offset_right = 857.0
offset_bottom = 435.0
text = "Sum: "
label_settings = ExtResource("2_wmbfa")

[node name="lblAver" type="Label" parent="."]
layout_mode = 0
offset_left = 260.0
offset_top = 394.0
offset_right = 847.0
offset_bottom = 631.0
text = "Average: "
label_settings = ExtResource("2_wmbfa")

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 542.0
offset_right = 242.0
offset_bottom = 618.0
theme = ExtResource("3_l8foh")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 502.0
offset_top = 546.0
offset_right = 712.0
offset_bottom = 622.0
theme = ExtResource("3_l8foh")
text = "Clear"

[node name="btnQuit" type="Button" parent="."]
layout_mode = 0
offset_left = 868.0
offset_top = 542.0
offset_right = 1078.0
offset_bottom = 618.0
theme = ExtResource("3_l8foh")
text = "Quit"

[node name="Num1_lin" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 12.0
offset_right = 307.0
offset_bottom = 97.0
theme = ExtResource("3_l8foh")
placeholder_text = "Number 1"

[node name="Num2_lin" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 105.0
offset_right = 307.0
offset_bottom = 190.0
theme = ExtResource("3_l8foh")
placeholder_text = "Number 2"

[node name="Num3_lin" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = 12.0
offset_right = 599.0
offset_bottom = 97.0
theme = ExtResource("3_l8foh")
placeholder_text = "Number 3"

[node name="Num4_lin" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = 105.0
offset_right = 599.0
offset_bottom = 190.0
theme = ExtResource("3_l8foh")
placeholder_text = "Number 4"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnQuit" to="." method="_on_btn_quit_pressed"]
